[package]
name = "ts-fmt-lite"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/ts-fmt-lite.git"
homepage = "https://github.com/SOF3/ts-fmt-lite"

[dependencies]
derive_builder = "0.7.2"
proc-macro2 = "1.0"

[dev-dependencies]
quote = "1.0"

[features]
default = ["naive-wrap"]
naive-wrap = []

[badges]
travis-ci = {repository = "SOF3/ts-fmt-lite"}
